feat: add cart clear endpoint
